--- a/css/styles.css
+++ b/css/styles.css
@@ -230,7 +230,7 @@ h4#title{
 }
 
 .medalha{
-    width:20%;
+    width:30%;
     text-align:center;
     padding: 20px 5% 20px 5%;
 }
@@ -266,3 +266,19 @@ h4#title{
     background-repeat: no-repeat;
     background-position: 50% 50%;
   }
+
+@media (max-width: 1220px){
+    h2#title{
+        font-size:40px;
+    }
+    h1#title{
+        font-size:80px;
+    }
+    .imagemPrata{
+        width:20%;
+    }
+    .certificacoesAcademicas{
+        width:20%;
+    }
+
+}
